shakethemoseby, moved download

--- a/alex_projects/2.html
+++ b/alex_projects/2.html
@@ -10,7 +10,7 @@
 	<div class="row">
 	  <div class="column side">
 		<div id="sidebar" class="content">
-			<h3>Navigation</h3>
+			<h3>Roadmap Navigation</h3>
 			<center>
 			<a href="#road">The Road So Far</a><br>
 			<a href="#present">The Present</a><br>
@@ -21,6 +21,19 @@
 			<a href="#finished">What Does It Look Like Finished?</a><br>
 			<br>
 			</center>
+		</div>
+		<div id="sidebar" class="content">
+			<h3>Game Download</h3>
+			<center><p>Download GFHS from GitHub, simply click the link then choose 'Source Code (zip)' to obtain a zip file containing the latest release!</p>
+			<br>
+			<button class="button" onclick="window.location.href='https://github.com/ThePyromancer23/GayFurryHighschool-Dists/releases/tag/Release';">Download Gay Furry Highschool Here</button></center>
+			<br>
+		</div>
+		<div id="sidebar" class="content">
+			<h3>Shake the Moseby</h3>
+			<br>
+			<img class="moseby" src="images/mrmoseby.png" width="300">
+			<br>
 		</div>
 	  </div>
 	  <div class="column middle">
@@ -120,10 +133,6 @@
 			<p>Ideally, a finished Gay Furry Highschool is a game where you can go to school to meet a large variety of characters, replay the game to see different routes, experience the game differently each time through choices and random events, raise stats, strategize how to run into favorite characters more often, or what dates and gifts they might like... all of these things as well as stuff like, pissing off characters you don't like, or uncovering different elements of the cult. Overall, this still isn't meant to be a completely serious project, but it could be a genuinely good game. A genuinely good dating sim, even. But more than anything I think a finished product for GFHS is something that will produce a few laughs. </p>
 			<br>
 			<p>I wrote this whole roadmap to illustrate for everyone interested in where we've been, where we are, and where I would personally like to go. There's so much undecided and so much subject to change but I hope I produced a clear picture of all of this and maybe even made you excited for the possiblities. It's not a small undertaking, but if there are people willing to help, pitch ideas, write, playtest... it will become a much more reasonable goal. I know this project was largely abandoned quite a while ago now, but it's never something that has left my peripherals as a writer or as a programmer. If people are no longer interested because of the gap or for any other reason, I understand, but at the same time, if there are those willing to give this a chance with me. Thank you, and please let me know.<br>  --Alex</p>
-			<br>
-			<h1 id="download">Download Link</h1>
-			<br>
-			<center><button class="button" onclick="window.location.href='https://github.com/ThePyromancer23/GayFurryHighschool-Dists/releases/tag/Release';">Download Gay Furry Highschool Here</button></center>
 			<br><br>
 			</article>
 		</div>
