--- a/alex_projects/1.html
+++ b/alex_projects/1.html
@@ -6,16 +6,22 @@
 <body>
 <div class="pageblock"></div>
 <div class="main">
-	<div class="row">
-	  <div class="column side">
-		<div id="title-bar" class="title">Website Title</div>
-		<div id="sidebar" class="content"></div>
-	  </div>
-	  <div class="column middle">
-		<div id="location-bar" class="location">Location Title</div>
-		<div id="content" class="content"></div>
-	  </div>
+	<div id="title">
+		<div id="title-bar" class="boxshadow">
+			<h1 class="title">INTERSTELLAR</h1>
+		</div>
+		<div id="location-bar" class="boxshadow">
+			<h1 class="location">Location</h1>
+		</div>
 	</div>
-</div>
+	<div id="game">
+		<div id="sidebar-container">
+			<div id="sidebar" class= "boxshadow game"></div>
+			<div id="sidebar" class= "boxshadow game"></div>
+			<div id="sidebar" class= "boxshadow game"></div>
+		</div>
+		<div id="content" class= "boxshadow">
+		</div>
+	</div>
 </body>
 </html>
