--- a/alex_projects/1.html
+++ b/alex_projects/1.html
@@ -16,12 +16,22 @@
 	</div>
 	<div id="game">
 		<div id="sidebar-container">
-			<div id="sidebar" class= "boxshadow game"></div>
-			<div id="sidebar" class= "boxshadow game"></div>
-			<div id="sidebar" class= "boxshadow game"></div>
+			<div id="sidebar" class= "boxshadow game">
+				<p>Content goes here.</p>
+			</div>
+			<div id="sidebar2" class= "boxshadow game">
+				<p>Content goes here.</p>
+			</div>
+			<div id="sidebar" class= "boxshadow game">
+				<p>Content goes here.</p>
+			</div>
 		</div>
-		<div id="content" class= "boxshadow">
+		<div id="story" class= "boxshadow game">
+			<div id="content">
+				<p>Content goes here.</p>
+			</div>
 		</div>
 	</div>
+</div>
 </body>
 </html>
