--- a/sara_projects/2.html
+++ b/sara_projects/2.html
@@ -6,21 +6,33 @@
 <body>
 <div class="pageblock"></div>
 <div class="main">
-	<div class="row">
-	  <div class="column side">
-			<div id="title-bar" class="title">Website Title</div>
-			<div id="sidebar" class="content">
-			/* Sidebar content here */
+	<div id="title">
+		<div id="title-bar" class="boxshadow">
+			<h1 class="title">INTERSTELLAR</h1>
+		</div>
+		<div id="location-bar" class="boxshadow">
+			<h1 class="location">Location</h1>
+		</div>
+	</div>
+	<div id="game">
+		<div id="sidebar-container">
+			<div id="sidebar" class= "boxshadow game">
+				<p>Content goes here.</p>
 			</div>
-	  </div>
-	  <div class="column middle">
-			<div id="location-bar" class="location">Location Title</div>
-			<div id="content" class="content">
-					<div id="story">
-						<h1>kids are dumb</h1>
-					</div>
+			<div id="sidebar2" class= "boxshadow game">
+				<p>Content goes here.</p>
 			</div>
-	  </div>
+			<div id="sidebar" class= "boxshadow game">
+				<p>Content goes here.</p>
+			</div>
+		</div>
+		<div id="story" class= "boxshadow game">
+			<div id="imgcontainer" class="boxshadow">
+					<center><img src= "images/lock.png" class ="digitaleffect"></center>
+			</div>
+			<div id="branch1">
+			</div>
+		</div>
 	</div>
 </div>
 </body>
