Cleaning up + more storylet fixing

--- a/sara_projects/2.html
+++ b/sara_projects/2.html
@@ -26,12 +26,14 @@
 				<p>Content goes here.</p>
 			</div>
 		</div>
-		<div id="story" class= "boxshadow game">
+	<div id="story" class= "boxshadow game">
+		<div class=intro>
 			<div id="imgcontainer" class="boxshadow">
 					<center><img src= "images/lock.png" class ="digitaleffect"></center>
 			</div>
-			<div id="branch1">
-			</div>
+			<h1 class=textbox>Content goes here.</h1>
+		</div>
+		<div id="branch1">
 		</div>
 	</div>
 </div>
