--- a/sara_projects/2.html
+++ b/sara_projects/2.html
@@ -16,24 +16,31 @@
 	</div>
 	<div id="game">
 		<div id="sidebar-container">
-			<div id="sidebar" class= "boxshadow game">
+			<div id="sidebar" class="boxshadow game">
 				<p>Content goes here.</p>
 			</div>
-			<div id="sidebar2" class= "boxshadow game">
+			<div id="sidebar2" class="boxshadow game">
 				<p>Content goes here.</p>
 			</div>
-			<div id="sidebar" class= "boxshadow game">
+			<div id="sidebar" class="boxshadow game">
 				<p>Content goes here.</p>
 			</div>
 		</div>
-	<div id="story" class= "boxshadow game">
-		<div class=intro>
-			<div id="imgcontainer" class="boxshadow">
-					<center><img src= "images/lock.png" class ="digitaleffect"></center>
+	<div id="story" class="boxshadow game">
+		<div class="intro">
+			<div class="storylet-column1">
+				<div id="imgcontainer" class="boxshadow">
+					<center><img src="images/lock.png" class="digitaleffect"></center>
+				</div>
 			</div>
-			<h1 class=textbox>Content goes here.</h1>
-		</div>
-		<div id="branch1">
+			<div class="storylet-column2">
+				<div id="storytitle">
+					<h1 class="textbox">This is a title to test wraparound behavior. Hopefully this works okay.</h1>
+				</div>
+				<div class="storydesc">
+					<p>This is an example description to test wraparound behavior. Hopefully this works okay.</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
