Center and Sizing

--- a/sara_projects/1.html
+++ b/sara_projects/1.html
@@ -23,11 +23,21 @@
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-5deg); }
 }
+	div {
+		width: auto;
+		text-align: center;
+		padding: 15px;
+		border: 3px solid red;
+			}
+			img {
+				max-width: 30%;
+				height: auto;
+			}
 </style>
 </head>
 <body>
 	<h1> <center>Drink Water Bitch </center></h1>
-	<img src= "images/20210719_172935.jpg">
+	<center><img src= "images/20210719_172935.jpg"></center>
 
 </body>
 </html>
