--- a/interstellar/interstellar.html
+++ b/interstellar/interstellar.html
@@ -6,17 +6,17 @@
 <body>
 <div class="pageblock"></div>
 <div class="wrapper">
-	<div style="background-color: red;">
+	<div>
 		<div id="title-bar" class="boxshadow">
 			<h1 class="title">INTERSTELLAR</h1>
 		</div>
 	</div>
-  <div style="background-color: blue;">
+  <div>
 		<div id="location-bar" class="boxshadow">
 			<h1 class="location">Location</h1>
 		</div>
 	</div>
-  <div style="background-color: green;">
+  <div>
 		<div id="sidebar" class= "boxshadow game">
 			<p>Content goes here.</p>
 		</div>
@@ -27,10 +27,20 @@
 			<p>Content goes here.</p>
 		</div>
 	</div>
-  <div style="background-color: orange;">
+  <div>
 		<div id="story" class= "boxshadow game">
-			<div id="imgcontainer" class="boxshadow">
-					<center><img src= "images/lock.png" class ="digitaleffect"></center>
+			<div class="storylet">
+				<div>
+					<div id="imgcontainer" class="boxshadow">
+							<center><img src= "images/lock.png" class ="digitaleffect"></center>
+					</div>
+				</div>
+				<div>
+					<div id="storytext">
+						<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus odio ac ligula bibendum</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus odio ac ligula bibendum, vel sagittis ex fermentum. Nulla egestas eleifend justo nec congue. Ut et nunc egestas nunc eleifend feugiat. Maecenas ut luctus diam. In eget posuere nisi, id viverra velit. Suspendisse ornare, velit tempus feugiat venenatis, felis nunc dapibus dolor, placerat euismod justo quam ut metus. Sed faucibus ex eget nunc ultrices malesuada. Maecenas arcu arcu, ultricies vel felis sit amet, pretium mattis enim. Morbi varius, felis quis bibendum convallis, dolor ex consectetur libero, ac laoreet sem lacus ut tortor. Fusce in faucibus neque. In aliquet placerat nibh non sollicitudin. Curabitur tincidunt est eget imperdiet ultrices. </p>
+					</div>
+				</div>
 			</div>
 			<div id="branch1">
 			</div>
