--- a/interstellar/interstellar.html
+++ b/interstellar/interstellar.html
@@ -8,8 +8,6 @@
 	<link rel="stylesheet" href="styles1.css">
 	<script type="text/javascript">
 		"use strict";
-
-
 		function showStory(story) {
 		  var html = $.templates.storylet.render(story);
 		  $("#story").html(html);
@@ -42,8 +40,26 @@
 	</div>
   <div>
 		<div id="story" class= "boxshadow game">
-		<div id="branch"></div>
-		</div>
+			<div id="branch">
+				<div class="branch-top">
+					<div class="branch-margin">
+							<img width="40" src="images/lock.png" class="digitaleffect boxshadow">
+					</div>
+					<div>
+							<div id="storytext">
+								<h2  class="branch-margin">{{:Title}}</h2>
+								<p>{{:Desc}}</p>
+							</div>
+					</div>
+				</div>
+				<hr class="branch-divider">
+				<div class="branch-footer">
+					<div></div>
+					<div class="button-container">
+						<button class="button">{{:ButtonText}}</button>
+					</div>
+				</div>
+			</div>
 	</div>
 </div>
 </body>
