--- a/interstellar/interstellar.html
+++ b/interstellar/interstellar.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <html>
 <head>
+	<meta charset="utf-8" />
+	<title>Interstellar</title>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="https://www.jsviews.com/download/jsrender.min.js"></script>
 	<script src="templates.js"></script>
